Yarn Client refactor